--- a/download-code/src/main/java/br/edu/infnet/visao/Janela.form
+++ b/download-code/src/main/java/br/edu/infnet/visao/Janela.form
@@ -789,10 +789,10 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="label12" max="32767" attributes="0"/>
+                      <Component id="label12" pref="33" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
-                      <Component id="label13" max="32767" attributes="0"/>
-                      <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
+                      <Component id="label13" pref="28" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel8" alignment="3" max="32767" attributes="0"/>
                           <Component id="campoEditarId" alignment="3" max="32767" attributes="0"/>
@@ -817,7 +817,7 @@
                           <Component id="botaoRemoverProduto" alignment="3" pref="47" max="32767" attributes="0"/>
                           <Component id="botaoEditarProduto" alignment="3" pref="47" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="97" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
